# parse_kolesa_krisha

./: .gitignore  README.md  main.py  parsed_data.pkl  proxies.py  pyproject.toml
app/api/endpoints/: endpoints.py
app/database/: connection.py  models.py
app/error_handler/: error_handler.py
app/parser/: base_parser.py  house_parser.py  kolesa_parse.py  krisha_parser.py  land_plot_parser.py
app/schemas/: base_schemas.py  cars.py  error_message.py  flats.py  response_data.py
app/service/: base_service.py
app/settings/: app_factory.py  config.py  http_client.py  middlewares.py  mongo_db.py
